--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,24 @@
+nav {
+  background-color: #0079FA;
+  padding: 1rem;
+  text-align: center;
+}
+
+nav a {
+  color: white;
+  text-decoration: none;
+  margin: 0 1rem;
+  font-weight: bold;
+}
+
+h1 {
+  font-size: 2rem;
+  font-family: sans-serif;
+  color: #333;
+  text-align: center;
+  margin-top: 1rem;
+}
+
 main {
   max-width: 840 px;
 }
@@ -12,11 +33,11 @@ main img {
 }
 
 aside {
-  width: 25rem;
-  margin: 2rem;
+  width: 50rem;
+  margin: 3rem;
   border: 1px solid rgb(0 0 0/ 1);
-  padding: 1rem;
-  background-color: #B0ACFA;
+  padding: 1.5rem;
+  background-color: #e0defa;
   color: #0079FA;
   text-align: center;
 }
