--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -38,8 +38,7 @@ header img {
     margin: 10px;
 }
 
-h1,
-h2 {
+h1,h2 {
     font-family: var(--heading-font);
     color: var(--primary-color);
 }
